# mcp-weather-rs

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs  service.rs  util.rs
